syntax = "proto3";
package wiradata.users;

option go_package = "pb;users";

import "google/protobuf/timestamp.proto";

message Branch {
  string id = 1;
  string company_id = 2;
  string name = 3;
  string code = 4;
  string address = 5;
  string city = 6;
  string province = 7;
  string npwp = 8;
  string phone = 9;
  string pic = 10;
  string pic_phone = 11;
  timestamp created_at =  12;
  string created_by = 13;
  timestamp updated_at = 14;
  string updated_by = 15;
}