syntax = "proto3";
package wiradata.users;

option go_package = "pb;users";

import "branch_message.proto";
import "generic_message.proto";

message ListBranchRequest {
  Pagination pagination = 1;
  string company_id = 2;
}

message BranchPaginationResponse {
  Pagination pagination = 1;
  string company_id = 2;
  uint32 count = 3;
}

message ListBranchResponse {
  BranchPaginationResponse pagination = 1;
  repeated Branch branches = 2; 
}

service BranchService {
  rpc Create(Branch) returns (Branch) {}
  rpc Update(Branch) returns (Branch) {}
  rpc View(Id) returns (Branch) {}
  rpc Delete(Id) returns (Boolean) {}
  rpc List(ListBranchRequest) returns (ListBranchResponse) {}
}